--- a/style.css
+++ b/style.css
@@ -1,5 +1,23 @@
+ td{
+  border: 1px solid black; 
+  width:50px;
+  height:50px;
+} 
 
-.grid-container {
+table{
+  margin-top: 30px;
+}
+
+tr{
+  display:flex;
+  justify-content: center;
+}
+
+
+
+
+
+/* .grid-container {
     display: grid;
     grid-template-columns: auto auto auto;
    
@@ -11,4 +29,4 @@
     padding: 20px;
     font-size: 30px;
     text-align: center;
-  }
+  } */
